--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.outer-container{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;    
+  justify-content: center; 
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 257px;
+  height: 130px;
+  background-color: #FFFFFF;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+.box-first {
+  width: 60px;
+  height: 56px;
+  text-align: center;
+  border: #B24242 solid 1px;
+  border-radius: 8px 0px 0px 8px;
+  background-color: #FFFFFF;
+  vertical-align: middle;
+  line-height: 56px;
+  color: #B24242;
+  font-size: 21px;
+}
+.box-second {
+  width: 60px;
+  height: 52px;
+  text-align: center;
+  border: #B24242 solid 1px;
+  border-left: 0;
+  background-color: #FBE8E8;
+  vertical-align: middle;
+  line-height: 56px;
+  color: #B24242;
+  font-size: 21px;
+  
+}
+.box-third {
+  width: 60px;
+  height: 56px;
+  text-align: center;
+  border: #B24242 solid 1px;
+  border-radius: 0px  8px 8px 0px;
+  background-color: #B24242;
+  vertical-align: middle;
+  line-height: 56px;
+  color:#FFFFFF;
+  font-size: 21px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box-second::-webkit-inner-spin-button, 
+.box-second::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+textarea:focus, input:focus{
+  outline: none;
 }
